Used JDK 19 build 19-ea+25 with jextract