@@ -1,2 +1,2 @@
 # Run java class
-java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign SayHello.Java
+java -Djava.library.path=. --enable-native-access=ALL-UNNAMED --enable-preview --source 19 SayHello.Java
