@@ -1,2 +1,2 @@
 # Run java class
-java --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.foreign Speech.java "$*"
+java --enable-native-access=ALL-UNNAMED --enable-preview --source 19 Speech.java "$*"
