@@ -1,4 +1,5 @@
-java -cp .:classes \
+java -cp classes \
  --enable-native-access=ALL-UNNAMED \
- --add-modules jdk.incubator.foreign \
+ --enable-preview \
+ --source 19 \
  src/StructsArray.java
