@@ -1,4 +1,4 @@
  javac -d classes \
-   -cp classes:. \
-   --add-modules jdk.incubator.foreign \
+   -cp .:classes \
+   --enable-preview --source 19 \
    src/PanamaCallback.java
