@@ -1,4 +1,4 @@
-java -cp classes \
-  --enable-native-access=ALL-UNNAMED  \
-  --add-modules jdk.incubator.foreign \
+java --enable-native-access=ALL-UNNAMED \
+  -classpath .:classes \
+  --enable-preview \
   PanamaCallback
